--- a/src/main/java/org/tensa/visualizador/PrimerFrame.form
+++ b/src/main/java/org/tensa/visualizador/PrimerFrame.form
@@ -384,6 +384,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseDragged" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jPanelCameraMouseDragged"/>
+            <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanelCameraMouseReleased"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="advancedWiredPanel();"/>
